[fli-iam#1805] Remove commented annotations